--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "breakpoint-sass": "^2.7.1",
     "chai": "3",
     "chai-enzyme": "^0.8.0",
     "chai-spies": "^0.7.1",
