--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "feathers": "^2.1.7",
+    "feathers-authentication-client": "^0.3.3",
+    "feathers-hooks": "^2.0.2",
+    "feathers-rest": "^1.8.0",
     "markdown": "^0.5.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-medium-editor": "^1.8.1",
     "react-redux": "^5.0.6",
+    "react-router": "3.0.5",
+    "react-router-redux": "4.0.8",
     "react-scripts": "1.0.11",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "superagent": "^3.5.2",
     "to-markdown": "^3.1.0"
   },
   "scripts": {
