--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "feathers-hooks": "^2.0.2",
     "feathers-rest": "^1.8.0",
     "markdown": "^0.5.0",
+    "material-ui": "^0.17.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -16,6 +17,7 @@
     "react-router": "3.0.5",
     "react-router-redux": "4.0.8",
     "react-scripts": "1.0.11",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "superagent": "^3.5.2",
